parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> compilation_unit
Rule 1     compilation_unit -> sections main_section
Rule 2     main_section -> MAIN COLON main_body
Rule 3     main_body -> stm main_body
Rule 4     main_body -> var_definition main_body
Rule 5     main_body -> ENDMAIN
Rule 6     sections -> var_definition sections
Rule 7     sections -> class_definition sections
Rule 8     sections -> <empty>
Rule 9     var_definition -> type var_list
Rule 10    var_definition -> PERMANENT type var_list
Rule 11    var_definition -> CONST type var_list
Rule 12    var_definition -> PERMANENT CONST type var_list
Rule 13    var_definition -> CONST PERMANENT type var_list
Rule 14    class_definition -> CLASS class_header
Rule 15    class_header -> ID_COLON class_body
Rule 16    class_header -> ID EXTENDS ID_COLON class_body
Rule 17    var_list -> ID SEMI
Rule 18    var_list -> ID COMMA var_list_tail
Rule 19    var_list -> ID ASSIG expression SEMI
Rule 20    var_list -> ID ASSIG expression COMMA var_list_tail
Rule 21    var_list -> ID PASSIG expression SEMI
Rule 22    var_list -> ID PASSIG expression COMMA var_list_tail
Rule 23    var_list -> ID PASSIG ALLOC ID_LP par_list SEMI
Rule 24    var_list -> ID PASSIG ALLOC ID_LP par_list COMMA var_list_tail
Rule 25    var_list_tail -> ID SEMI
Rule 26    var_list_tail -> ID COMMA var_list_tail
Rule 27    var_list_tail -> ID ASSIG expression SEMI
Rule 28    var_list_tail -> ID ASSIG expression COMMA var_list_tail
Rule 29    var_list_tail -> ID PASSIG expression SEMI
Rule 30    var_list_tail -> ID PASSIG expression COMMA var_list_tail
Rule 31    var_list_tail -> ID PASSIG ALLOC ID_LP par_list SEMI
Rule 32    var_list_tail -> ID PASSIG ALLOC ID_LP par_list COMMA var_list_tail
Rule 33    type -> BOOL
Rule 34    type -> CHAR
Rule 35    type -> STRING
Rule 36    type -> INT
Rule 37    type -> FLOAT
Rule 38    type -> ID
Rule 39    type -> BOOL_LS type_tail
Rule 40    type -> CHAR_LS type_tail
Rule 41    type -> STRING_LS type_tail
Rule 42    type -> INT_LS type_tail
Rule 43    type -> FLOAT_LS type_tail
Rule 44    type -> ID_LS type_tail
Rule 45    type -> FILE
Rule 46    type_tail -> RLS type_tail
Rule 47    type_tail -> RS
Rule 48    atype -> BOOL
Rule 49    atype -> CHAR
Rule 50    atype -> STRING
Rule 51    atype -> INT
Rule 52    atype -> FLOAT
Rule 53    atype -> ID
Rule 54    atype -> BOOL_AT
Rule 55    atype -> CHAR_AT
Rule 56    atype -> STRING_AT
Rule 57    atype -> INT_AT
Rule 58    atype -> FLOAT_AT
Rule 59    atype -> ID_AT
Rule 60    atype -> BOOL_LS atype_tail
Rule 61    atype -> CHAR_LS atype_tail
Rule 62    atype -> STRING_LS atype_tail
Rule 63    atype -> INT_LS atype_tail
Rule 64    atype -> FLOAT_LS atype_tail
Rule 65    atype -> ID_LS atype_tail
Rule 66    atype -> FILE
Rule 67    atype_tail -> RLS atype_tail
Rule 68    atype_tail -> RS_AT
Rule 69    atype_tail -> RS
Rule 70    stms -> stm stms
Rule 71    stms -> stm
Rule 72    stm -> ID_COLON ustm
Rule 73    stm -> ustm
Rule 74    class_body -> ENDCLASS
Rule 75    class_body -> attr_definition class_body
Rule 76    class_body -> method_header method_body class_body
Rule 77    class_body -> PUBLIC method_header method_body class_body
Rule 78    class_body -> PRIVATE method_header method_body class_body
Rule 79    attr_definition -> PUBLIC SHARED CONST type var_list
Rule 80    attr_definition -> PUBLIC CONST SHARED type var_list
Rule 81    attr_definition -> PRIVATE SHARED CONST type var_list
Rule 82    attr_definition -> PRIVATE CONST SHARED type var_list
Rule 83    attr_definition -> PUBLIC SHARED type var_list
Rule 84    attr_definition -> PUBLIC CONST type var_list
Rule 85    attr_definition -> SHARED CONST type var_list
Rule 86    attr_definition -> CONST SHARED type var_list
Rule 87    attr_definition -> PRIVATE SHARED type var_list
Rule 88    attr_definition -> PRIVATE CONST type var_list
Rule 89    attr_definition -> PUBLIC type var_list
Rule 90    attr_definition -> SHARED type var_list
Rule 91    attr_definition -> CONST type var_list
Rule 92    attr_definition -> PRIVATE type var_list
Rule 93    attr_definition -> type var_list
Rule 94    method_header -> METHOD ID_LP arg_list ARROW type COLON
Rule 95    method_header -> METHOD ID_LP arg_list COLON
Rule 96    arg_list -> RP
Rule 97    arg_list -> atype ID RP
Rule 98    arg_list -> atype ID COMMA arg_list_tail
Rule 99    arg_list -> CONST atype ID RP
Rule 100   arg_list -> CONST atype ID COMMA arg_list_tail
Rule 101   arg_list_tail -> RP
Rule 102   arg_list_tail -> atype ID RP
Rule 103   arg_list_tail -> atype ID COMMA arg_list_tail
Rule 104   arg_list_tail -> CONST atype ID RP
Rule 105   arg_list_tail -> CONST atype ID COMMA arg_list_tail
Rule 106   method_body -> stm method_body
Rule 107   method_body -> var_definition method_body
Rule 108   method_body -> ENDMETHOD
Rule 109   ustm -> null_stm
Rule 110   ustm -> assig_stm
Rule 111   ustm -> passig_stm
Rule 112   ustm -> return_stm
Rule 113   ustm -> preturn_stm
Rule 114   ustm -> call_stm
Rule 115   ustm -> if_stm
Rule 116   ustm -> while_stm
Rule 117   ustm -> for_stm
Rule 118   ustm -> goto_stm
Rule 119   ustm -> break_stm
Rule 120   ustm -> continue_stm
Rule 121   ustm -> guard_stm
Rule 122   ustm -> raise_stm
Rule 123   ustm -> terminate_stm
Rule 124   break_stm -> BREAK SEMI
Rule 125   continue_stm -> CONTINUE SEMI
Rule 126   terminate_stm -> TERMINATE SEMI
Rule 127   null_stm -> SEMI
Rule 128   assig_stm -> storage ASSIG expression SEMI
Rule 129   passig_stm -> storage PASSIG expression SEMI
Rule 130   passig_stm -> storage PASSIG ALLOC ID_LP par_list SEMI
Rule 131   call_stm -> call SEMI
Rule 132   if_stm -> IF expression THEN stms ENDIF
Rule 133   if_stm -> IF expression THEN stms ELSE stms ENDIF
Rule 134   while_stm -> WHILE expression DO stms ENDWHILE
Rule 135   while_stm -> WHILE expression DO ENDWHILE
Rule 136   while_stm -> WHILE DO stms ENDWHILE
Rule 137   while_stm -> WHILE DO ENDWHILE
Rule 138   for_stm -> FOR prologue condition epilogue stms ENDFOR
Rule 139   for_stm -> FOR prologue condition epilogue ENDFOR
Rule 140   goto_stm -> GOTO ID SEMI
Rule 141   prologue -> storage ASSIG expression prologue_tail
Rule 142   prologue -> SEMI
Rule 143   prologue_tail -> COMMA storage ASSIG expression prologue_tail
Rule 144   prologue_tail -> SEMI
Rule 145   condition -> expression SEMI
Rule 146   condition -> SEMI
Rule 147   epilogue -> storage ASSIG expression epilogue_tail
Rule 148   epilogue -> DO
Rule 149   epilogue_tail -> COMMA storage ASSIG expression epilogue_tail
Rule 150   epilogue_tail -> DO
Rule 151   storage -> arr
Rule 152   storage -> var
Rule 153   return_stm -> RETURN SEMI
Rule 154   return_stm -> RETURN expression SEMI
Rule 155   preturn_stm -> PRETURN expression SEMI
Rule 156   guard_stm -> GUARD COLON stms CATCH COLON catch_block
Rule 157   catch_block -> STRING_LIT COLON stms catch_block_tail
Rule 158   catch_block_tail -> ENDCATCH
Rule 159   catch_block_tail -> STRING_LIT COLON stms catch_block_tail
Rule 160   raise_stm -> RAISE expression SEMI
Rule 161   expression -> simple_expression
Rule 162   expression -> expression PLUS expression
Rule 163   expression -> expression MINUS expression
Rule 164   expression -> expression STAR expression
Rule 165   expression -> expression DIV expression
Rule 166   expression -> expression IDIV expression
Rule 167   expression -> expression MOD expression
Rule 168   expression -> expression AND expression
Rule 169   expression -> expression OR expression
Rule 170   expression -> expression LT expression
Rule 171   expression -> expression LE expression
Rule 172   expression -> expression GT expression
Rule 173   expression -> expression GE expression
Rule 174   expression -> expression EQ expression
Rule 175   expression -> expression NEQ expression
Rule 176   expression -> MINUS simple_expression
Rule 177   expression -> NOT simple_expression
Rule 178   simple_expression -> LP expression RP
Rule 179   simple_expression -> INT_LIT
Rule 180   simple_expression -> FLOAT_LIT
Rule 181   simple_expression -> FALSE
Rule 182   simple_expression -> TRUE
Rule 183   simple_expression -> NOREF
Rule 184   simple_expression -> CHAR_LIT
Rule 185   simple_expression -> STRING_LIT
Rule 186   simple_expression -> var
Rule 187   simple_expression -> arr
Rule 188   simple_expression -> call
Rule 189   arr -> ID_LS COLON RS
Rule 190   arr -> ID_LS COLON expression RS
Rule 191   arr -> ID_LS expression COLON RS
Rule 192   arr -> ID_LS expression COLON expression RS
Rule 193   arr -> qualifier ID_LS COLON RS
Rule 194   arr -> qualifier ID_LS COLON expression RS
Rule 195   arr -> qualifier ID_LS expression COLON RS
Rule 196   arr -> qualifier ID_LS expression COLON expression RS
Rule 197   arr -> ID_LS expression RS arr_tail
Rule 198   arr -> qualifier ID_LS expression RS arr_tail
Rule 199   arr_tail -> LS expression RS arr_tail
Rule 200   arr_tail -> <empty>
Rule 201   call -> ID_LP par_list
Rule 202   call -> BOOL_LP expression RP
Rule 203   call -> CHAR_LP expression RP
Rule 204   call -> STRING_LP expression RP
Rule 205   call -> INT_LP expression RP
Rule 206   call -> FLOAT_LP expression RP
Rule 207   call -> FIN_DOT ID_LP par_list
Rule 208   call -> FOUT_DOT ID_LP par_list
Rule 209   call -> IDOF_LP expression RP
Rule 210   call -> SIZEOF_LP size_par RP
Rule 211   call -> TYPEOF_LP expression RP
Rule 212   call -> qualifier ID_LP par_list
Rule 213   size_par -> ID
Rule 214   size_par -> ID_LS type_tail
Rule 215   size_par -> qualifier ID
Rule 216   size_par -> qualifier ID_LS type_tail
Rule 217   qualifier -> PARENT_DOT qualifier
Rule 218   qualifier -> ID_DOT qualifier
Rule 219   qualifier -> ID_DOT
Rule 220   var -> ID
Rule 221   var -> qualifier ID
Rule 222   par_list -> RP
Rule 223   par_list -> expression RP
Rule 224   par_list -> expression COMMA par_list_tail
Rule 225   par_list_tail -> RP
Rule 226   par_list_tail -> expression RP
Rule 227   par_list_tail -> expression COMMA par_list_tail

Terminals, with rules where they appear

ALLOC                : 23 24 31 32 130
AND                  : 168
ARROW                : 94
ASSIG                : 19 20 27 28 128 141 143 147 149
BOOL                 : 33 48
BOOL_AT              : 54
BOOL_LP              : 202
BOOL_LS              : 39 60
BREAK                : 124
CATCH                : 156
CHAR                 : 34 49
CHAR_AT              : 55
CHAR_LIT             : 184
CHAR_LP              : 203
CHAR_LS              : 40 61
CLASS                : 14
COLON                : 2 94 95 156 156 157 159 189 190 191 192 193 194 195 196
COMMA                : 18 20 22 24 26 28 30 32 98 100 103 105 143 149 224 227
CONST                : 11 12 13 79 80 81 82 84 85 86 88 91 99 100 104 105
CONTINUE             : 125
DIV                  : 165
DO                   : 134 135 136 137 148 150
ELSE                 : 133
ENDCATCH             : 158
ENDCLASS             : 74
ENDFOR               : 138 139
ENDIF                : 132 133
ENDMAIN              : 5
ENDMETHOD            : 108
ENDWHILE             : 134 135 136 137
EQ                   : 174
EXTENDS              : 16
FALSE                : 181
FILE                 : 45 66
FIN_DOT              : 207
FLOAT                : 37 52
FLOAT_AT             : 58
FLOAT_LIT            : 180
FLOAT_LP             : 206
FLOAT_LS             : 43 64
FOR                  : 138 139
FOUT_DOT             : 208
GE                   : 173
GOTO                 : 140
GT                   : 172
GUARD                : 156
ID                   : 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 38 53 97 98 99 100 102 103 104 105 140 213 215 220 221
IDIV                 : 166
IDOF_LP              : 209
ID_AT                : 59
ID_COLON             : 15 16 72
ID_DOT               : 218 219
ID_LP                : 23 24 31 32 94 95 130 201 207 208 212
ID_LS                : 44 65 189 190 191 192 193 194 195 196 197 198 214 216
IF                   : 132 133
INT                  : 36 51
INT_AT               : 57
INT_LIT              : 179
INT_LP               : 205
INT_LS               : 42 63
LE                   : 171
LP                   : 178
LS                   : 199
LT                   : 170
MAIN                 : 2
METHOD               : 94 95
MINUS                : 163 176
MOD                  : 167
NEQ                  : 175
NOREF                : 183
NOT                  : 177
OR                   : 169
PARENT_DOT           : 217
PASSIG               : 21 22 23 24 29 30 31 32 129 130
PERMANENT            : 10 12 13
PLUS                 : 162
PRETURN              : 155
PRIVATE              : 78 81 82 87 88 92
PUBLIC               : 77 79 80 83 84 89
RAISE                : 160
RETURN               : 153 154
RLS                  : 46 67
RP                   : 96 97 99 101 102 104 178 202 203 204 205 206 209 210 211 222 223 225 226
RS                   : 47 69 189 190 191 192 193 194 195 196 197 198 199
RS_AT                : 68
SEMI                 : 17 19 21 23 25 27 29 31 124 125 126 127 128 129 130 131 140 142 144 145 146 153 154 155 160
SHARED               : 79 80 81 82 83 85 86 87 90
SIZEOF_LP            : 210
STAR                 : 164
STRING               : 35 50
STRING_AT            : 56
STRING_LIT           : 157 159 185
STRING_LP            : 204
STRING_LS            : 41 62
TERMINATE            : 126
THEN                 : 132 133
TRUE                 : 182
TYPEOF_LP            : 211
WHILE                : 134 135 136 137
error                : 

Nonterminals, with rules where they appear

arg_list             : 94 95
arg_list_tail        : 98 100 103 105
arr                  : 151 187
arr_tail             : 197 198 199
assig_stm            : 110
attr_definition      : 75
atype                : 97 98 99 100 102 103 104 105
atype_tail           : 60 61 62 63 64 65 67
break_stm            : 119
call                 : 131 188
call_stm             : 114
catch_block          : 156
catch_block_tail     : 157 159
class_body           : 15 16 75 76 77 78
class_definition     : 7
class_header         : 14
compilation_unit     : 0
condition            : 138 139
continue_stm         : 120
epilogue             : 138 139
epilogue_tail        : 147 149
expression           : 19 20 21 22 27 28 29 30 128 129 132 133 134 135 141 143 145 147 149 154 155 160 162 162 163 163 164 164 165 165 166 166 167 167 168 168 169 169 170 170 171 171 172 172 173 173 174 174 175 175 178 190 191 192 192 194 195 196 196 197 198 199 202 203 204 205 206 209 211 223 224 226 227
for_stm              : 117
goto_stm             : 118
guard_stm            : 121
if_stm               : 115
main_body            : 2 3 4
main_section         : 1
method_body          : 76 77 78 106 107
method_header        : 76 77 78
null_stm             : 109
par_list             : 23 24 31 32 130 201 207 208 212
par_list_tail        : 224 227
passig_stm           : 111
preturn_stm          : 113
prologue             : 138 139
prologue_tail        : 141 143
qualifier            : 193 194 195 196 198 212 215 216 217 218 221
raise_stm            : 122
return_stm           : 112
sections             : 1 6 7
simple_expression    : 161 176 177
size_par             : 210
stm                  : 3 70 71 106
stms                 : 70 132 133 133 134 136 138 156 157 159
storage              : 128 129 130 141 143 147 149
terminate_stm        : 123
type                 : 9 10 11 12 13 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
type_tail            : 39 40 41 42 43 44 46 214 216
ustm                 : 72 73
var                  : 152 186
var_definition       : 4 6 107
var_list             : 9 10 11 12 13 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
var_list_tail        : 18 20 22 24 26 28 30 32
while_stm            : 116

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (1) compilation_unit -> . sections main_section
    (6) sections -> . var_definition sections
    (7) sections -> . class_definition sections
    (8) sections -> .
    (9) var_definition -> . type var_list
    (10) var_definition -> . PERMANENT type var_list
    (11) var_definition -> . CONST type var_list
    (12) var_definition -> . PERMANENT CONST type var_list
    (13) var_definition -> . CONST PERMANENT type var_list
    (14) class_definition -> . CLASS class_header
    (33) type -> . BOOL
    (34) type -> . CHAR
    (35) type -> . STRING
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . ID
    (39) type -> . BOOL_LS type_tail
    (40) type -> . CHAR_LS type_tail
    (41) type -> . STRING_LS type_tail
    (42) type -> . INT_LS type_tail
    (43) type -> . FLOAT_LS type_tail
    (44) type -> . ID_LS type_tail
    (45) type -> . FILE

    MAIN            reduce using rule 8 (sections -> .)
    PERMANENT       shift and go to state 6
    CONST           shift and go to state 7
    CLASS           shift and go to state 8
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    BOOL_LS         shift and go to state 15
    CHAR_LS         shift and go to state 16
    STRING_LS       shift and go to state 17
    INT_LS          shift and go to state 18
    FLOAT_LS        shift and go to state 19
    ID_LS           shift and go to state 20
    FILE            shift and go to state 21

    compilation_unit               shift and go to state 1
    sections                       shift and go to state 2
    var_definition                 shift and go to state 3
    class_definition               shift and go to state 4
    type                           shift and go to state 5

state 1

    (0) S' -> compilation_unit .



state 2

    (1) compilation_unit -> sections . main_section
    (2) main_section -> . MAIN COLON main_body

    MAIN            shift and go to state 23

    main_section                   shift and go to state 22

state 3

    (6) sections -> var_definition . sections
    (6) sections -> . var_definition sections
    (7) sections -> . class_definition sections
    (8) sections -> .
    (9) var_definition -> . type var_list
    (10) var_definition -> . PERMANENT type var_list
    (11) var_definition -> . CONST type var_list
    (12) var_definition -> . PERMANENT CONST type var_list
    (13) var_definition -> . CONST PERMANENT type var_list
    (14) class_definition -> . CLASS class_header
    (33) type -> . BOOL
    (34) type -> . CHAR
    (35) type -> . STRING
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . ID
    (39) type -> . BOOL_LS type_tail
    (40) type -> . CHAR_LS type_tail
    (41) type -> . STRING_LS type_tail
    (42) type -> . INT_LS type_tail
    (43) type -> . FLOAT_LS type_tail
    (44) type -> . ID_LS type_tail
    (45) type -> . FILE

    MAIN            reduce using rule 8 (sections -> .)
    PERMANENT       shift and go to state 6
    CONST           shift and go to state 7
    CLASS           shift and go to state 8
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    BOOL_LS         shift and go to state 15
    CHAR_LS         shift and go to state 16
    STRING_LS       shift and go to state 17
    INT_LS          shift and go to state 18
    FLOAT_LS        shift and go to state 19
    ID_LS           shift and go to state 20
    FILE            shift and go to state 21

    var_definition                 shift and go to state 3
    sections                       shift and go to state 24
    class_definition               shift and go to state 4
    type                           shift and go to state 5

state 4

    (7) sections -> class_definition . sections
    (6) sections -> . var_definition sections
    (7) sections -> . class_definition sections
    (8) sections -> .
    (9) var_definition -> . type var_list
    (10) var_definition -> . PERMANENT type var_list
    (11) var_definition -> . CONST type var_list
    (12) var_definition -> . PERMANENT CONST type var_list
    (13) var_definition -> . CONST PERMANENT type var_list
    (14) class_definition -> . CLASS class_header
    (33) type -> . BOOL
    (34) type -> . CHAR
    (35) type -> . STRING
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . ID
    (39) type -> . BOOL_LS type_tail
    (40) type -> . CHAR_LS type_tail
    (41) type -> . STRING_LS type_tail
    (42) type -> . INT_LS type_tail
    (43) type -> . FLOAT_LS type_tail
    (44) type -> . ID_LS type_tail
    (45) type -> . FILE

    MAIN            reduce using rule 8 (sections -> .)
    PERMANENT       shift and go to state 6
    CONST           shift and go to state 7
    CLASS           shift and go to state 8
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    BOOL_LS         shift and go to state 15
    CHAR_LS         shift and go to state 16
    STRING_LS       shift and go to state 17
    INT_LS          shift and go to state 18
    FLOAT_LS        shift and go to state 19
    ID_LS           shift and go to state 20
    FILE            shift and go to state 21

    class_definition               shift and go to state 4
    sections                       shift and go to state 25
    var_definition                 shift and go to state 3
    type                           shift and go to state 5

state 5

    (9) var_definition -> type . var_list
    (17) var_list -> . ID SEMI
    (18) var_list -> . ID COMMA var_list_tail
    (19) var_list -> . ID ASSIG expression SEMI
    (20) var_list -> . ID ASSIG expression COMMA var_list_tail
    (21) var_list -> . ID PASSIG expression SEMI
    (22) var_list -> . ID PASSIG expression COMMA var_list_tail
    (23) var_list -> . ID PASSIG ALLOC ID_LP par_list SEMI
    (24) var_list -> . ID PASSIG ALLOC ID_LP par_list COMMA var_list_tail

    ID              shift and go to state 27

    var_list                       shift and go to state 26

state 6

    (10) var_definition -> PERMANENT . type var_list
    (12) var_definition -> PERMANENT . CONST type var_list
    (33) type -> . BOOL
    (34) type -> . CHAR
    (35) type -> . STRING
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . ID
    (39) type -> . BOOL_LS type_tail
    (40) type -> . CHAR_LS type_tail
    (41) type -> . STRING_LS type_tail
    (42) type -> . INT_LS type_tail
    (43) type -> . FLOAT_LS type_tail
    (44) type -> . ID_LS type_tail
    (45) type -> . FILE

    CONST           shift and go to state 29
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    BOOL_LS         shift and go to state 15
    CHAR_LS         shift and go to state 16
    STRING_LS       shift and go to state 17
    INT_LS          shift and go to state 18
    FLOAT_LS        shift and go to state 19
    ID_LS           shift and go to state 20
    FILE            shift and go to state 21

    type                           shift and go to state 28

state 7

    (11) var_definition -> CONST . type var_list
    (13) var_definition -> CONST . PERMANENT type var_list
    (33) type -> . BOOL
    (34) type -> . CHAR
    (35) type -> . STRING
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . ID
    (39) type -> . BOOL_LS type_tail
    (40) type -> . CHAR_LS type_tail
    (41) type -> . STRING_LS type_tail
    (42) type -> . INT_LS type_tail
    (43) type -> . FLOAT_LS type_tail
    (44) type -> . ID_LS type_tail
    (45) type -> . FILE

    PERMANENT       shift and go to state 31
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    BOOL_LS         shift and go to state 15
    CHAR_LS         shift and go to state 16
    STRING_LS       shift and go to state 17
    INT_LS          shift and go to state 18
    FLOAT_LS        shift and go to state 19
    ID_LS           shift and go to state 20
    FILE            shift and go to state 21

    type                           shift and go to state 30

state 8

    (14) class_definition -> CLASS . class_header
    (15) class_header -> . ID_COLON class_body
    (16) class_header -> . ID EXTENDS ID_COLON class_body

    ID_COLON        shift and go to state 33
    ID              shift and go to state 34

    class_header                   shift and go to state 32

state 9

    (33) type -> BOOL .

    ID              reduce using rule 33 (type -> BOOL .)
    COLON           reduce using rule 33 (type -> BOOL .)


state 10

    (34) type -> CHAR .

    ID              reduce using rule 34 (type -> CHAR .)
    COLON           reduce using rule 34 (type -> CHAR .)


state 11

    (35) type -> STRING .

    ID              reduce using rule 35 (type -> STRING .)
    COLON           reduce using rule 35 (type -> STRING .)


state 12

    (36) type -> INT .

    ID              reduce using rule 36 (type -> INT .)
    COLON           reduce using rule 36 (type -> INT .)


state 13

    (37) type -> FLOAT .

    ID              reduce using rule 37 (type -> FLOAT .)
    COLON           reduce using rule 37 (type -> FLOAT .)


state 14

    (38) type -> ID .

    ID              reduce using rule 38 (type -> ID .)
    COLON           reduce using rule 38 (type -> ID .)


state 15

    (39) type -> BOOL_LS . type_tail
    (46) type_tail -> . RLS type_tail
    (47) type_tail -> . RS

    RLS             shift and go to state 36
    RS              shift and go to state 37

    type_tail                      shift and go to state 35

state 16

    (40) type -> CHAR_LS . type_tail
    (46) type_tail -> . RLS type_tail
    (47) type_tail -> . RS

    RLS             shift and go to state 36
    RS              shift and go to state 37

    type_tail                      shift and go to state 38

state 17

    (41) type -> STRING_LS . type_tail
    (46) type_tail -> . RLS type_tail
    (47) type_tail -> . RS

    RLS             shift and go to state 36
    RS              shift and go to state 37

    type_tail                      shift and go to state 39

state 18

    (42) type -> INT_LS . type_tail
    (46) type_tail -> . RLS type_tail
    (47) type_tail -> . RS

    RLS             shift and go to state 36
    RS              shift and go to state 37

    type_tail                      shift and go to state 40

state 19

    (43) type -> FLOAT_LS . type_tail
    (46) type_tail -> . RLS type_tail
    (47) type_tail -> . RS

    RLS             shift and go to state 36
    RS              shift and go to state 37

    type_tail                      shift and go to state 41

state 20

    (44) type -> ID_LS . type_tail
    (46) type_tail -> . RLS type_tail
    (47) type_tail -> . RS

    RLS             shift and go to state 36
    RS              shift and go to state 37

    type_tail                      shift and go to state 42

state 21

    (45) type -> FILE .

    ID              reduce using rule 45 (type -> FILE .)
    COLON           reduce using rule 45 (type -> FILE .)


state 22

    (1) compilation_unit -> sections main_section .

    $end            reduce using rule 1 (compilation_unit -> sections main_section .)


state 23

    (2) main_section -> MAIN . COLON main_body

    COLON           shift and go to state 43


state 24

    (6) sections -> var_definition sections .

    MAIN            reduce using rule 6 (sections -> var_definition sections .)


state 25

    (7) sections -> class_definition sections .

    MAIN            reduce using rule 7 (sections -> class_definition sections .)


state 26

    (9) var_definition -> type var_list .

    PERMANENT       reduce using rule 9 (var_definition -> type var_list .)
    CONST           reduce using rule 9 (var_definition -> type var_list .)
    CLASS           reduce using rule 9 (var_definition -> type var_list .)
    BOOL            reduce using rule 9 (var_definition -> type var_list .)
    CHAR            reduce using rule 9 (var_definition -> type var_list .)
    STRING          reduce using rule 9 (var_definition -> type var_list .)
    INT             reduce using rule 9 (var_definition -> type var_list .)
    FLOAT           reduce using rule 9 (var_definition -> type var_list .)
    ID              reduce using rule 9 (var_definition -> type var_list .)
    BOOL_LS         reduce using rule 9 (var_definition -> type var_list .)
    CHAR_LS         reduce using rule 9 (var_definition -> type var_list .)
    STRING_LS       reduce using rule 9 (var_definition -> type var_list .)
    INT_LS          reduce using rule 9 (var_definition -> type var_list .)
    FLOAT_LS        reduce using rule 9 (var_definition -> type var_list .)
    ID_LS           reduce using rule 9 (var_definition -> type var_list .)
    FILE            reduce using rule 9 (var_definition -> type var_list .)
    MAIN            reduce using rule 9 (var_definition -> type var_list .)
    ENDMAIN         reduce using rule 9 (var_definition -> type var_list .)
    ID_COLON        reduce using rule 9 (var_definition -> type var_list .)
    SEMI            reduce using rule 9 (var_definition -> type var_list .)
    RETURN          reduce using rule 9 (var_definition -> type var_list .)
    PRETURN         reduce using rule 9 (var_definition -> type var_list .)
    IF              reduce using rule 9 (var_definition -> type var_list .)
    WHILE           reduce using rule 9 (var_definition -> type var_list .)
    FOR             reduce using rule 9 (var_definition -> type var_list .)
    GOTO            reduce using rule 9 (var_definition -> type var_list .)
    BREAK           reduce using rule 9 (var_definition -> type var_list .)
    CONTINUE        reduce using rule 9 (var_definition -> type var_list .)
    GUARD           reduce using rule 9 (var_definition -> type var_list .)
    RAISE           reduce using rule 9 (var_definition -> type var_list .)
    TERMINATE       reduce using rule 9 (var_definition -> type var_list .)
    ID_LP           reduce using rule 9 (var_definition -> type var_list .)
    BOOL_LP         reduce using rule 9 (var_definition -> type var_list .)
    CHAR_LP         reduce using rule 9 (var_definition -> type var_list .)
    STRING_LP       reduce using rule 9 (var_definition -> type var_list .)
    INT_LP          reduce using rule 9 (var_definition -> type var_list .)
    FLOAT_LP        reduce using rule 9 (var_definition -> type var_list .)
    FIN_DOT         reduce using rule 9 (var_definition -> type var_list .)
    FOUT_DOT        reduce using rule 9 (var_definition -> type var_list .)
    IDOF_LP         reduce using rule 9 (var_definition -> type var_list .)
    SIZEOF_LP       reduce using rule 9 (var_definition -> type var_list .)
    TYPEOF_LP       reduce using rule 9 (var_definition -> type var_list .)
    PARENT_DOT      reduce using rule 9 (var_definition -> type var_list .)
    ID_DOT          reduce using rule 9 (var_definition -> type var_list .)
    ENDMETHOD       reduce using rule 9 (var_definition -> type var_list .)


state 27

    (17) var_list -> ID . SEMI
    (18) var_list -> ID . COMMA var_list_tail
    (19) var_list -> ID . ASSIG expression SEMI
    (20) var_list -> ID . ASSIG expression COMMA var_list_tail
    (21) var_list -> ID . PASSIG expression SEMI
    (22) var_list -> ID . PASSIG expression COMMA var_list_tail
    (23) var_list -> ID . PASSIG ALLOC ID_LP par_list SEMI
    (24) var_list -> ID . PASSIG ALLOC ID_LP par_list COMMA var_list_tail

    SEMI            shift and go to state 44
    COMMA           shift and go to state 45
    ASSIG           shift and go to state 46
    PASSIG          shift and go to state 47


state 28

    (10) var_definition -> PERMANENT type . var_list
    (17) var_list -> . ID SEMI
    (18) var_list -> . ID COMMA var_list_tail
    (19) var_list -> . ID ASSIG expression SEMI
    (20) var_list -> . ID ASSIG expression COMMA var_list_tail
    (21) var_list -> . ID PASSIG expression SEMI
    (22) var_list -> . ID PASSIG expression COMMA var_list_tail
    (23) var_list -> . ID PASSIG ALLOC ID_LP par_list SEMI
    (24) var_list -> . ID PASSIG ALLOC ID_LP par_list COMMA var_list_tail

    ID              shift and go to state 27

    var_list                       shift and go to state 48

state 29

    (12) var_definition -> PERMANENT CONST . type var_list
    (33) type -> . BOOL
    (34) type -> . CHAR
    (35) type -> . STRING
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . ID
    (39) type -> . BOOL_LS type_tail
    (40) type -> . CHAR_LS type_tail
    (41) type -> . STRING_LS type_tail
    (42) type -> . INT_LS type_tail
    (43) type -> . FLOAT_LS type_tail
    (44) type -> . ID_LS type_tail
    (45) type -> . FILE

    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    BOOL_LS         shift and go to state 15
    CHAR_LS         shift and go to state 16
    STRING_LS       shift and go to state 17
    INT_LS          shift and go to state 18
    FLOAT_LS        shift and go to state 19
    ID_LS           shift and go to state 20
    FILE            shift and go to state 21

    type                           shift and go to state 49

state 30
